deployments/runner/gateway-2.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: actions-controller-webhook
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - actions-controller-webhook.manabie.io
    port:
      name: https-actions-controller-webhook
      number: 443
      protocol: HTTPS
    tls:
      credentialName: cert-actions-controller-webhook
      mode: SIMPLE
      privateKey: sds
      serverCertificate: sds
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: actions-controller-webhook
  namespace: actions-runner-system
spec:
  exportTo:
  - istio-system
  gateways:
  - istio-system/actions-controller-webhook
  hosts:
  - actions-controller-webhook.manabie.io
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: actions-runner-controller-github-webhook-server
        port:
          number: 80
